# ATLAS-OS

./: README.md  conftest.py  readme
Atlas_Meshtastic_Range_Tester/: config.json  range_tester.py
Atlas_Meshtastic_Range_Tester/modules/comms/: manager.py
BasePlate_OS/: master.py  module_loader.py
BasePlate_OS/modules/comms/: manager.py
BasePlate_OS/modules/operations/: manager.py
BasePlate_OS/tests/: test_bus.py
BasePlate_OS_Next/: bus.py  master.py  pyproject.toml
Gateway_OS/: config.json  master.py
Range_Test/: config.json  range_tester.py
atlas-antenna-demo/: antenna.py  comms.py  config.json  config.template.json  geo.py  gps.py  requirements.txt  start.py
atlas-antenna-demo/tests/: test_command.py  test_comms.py  test_geo.py  test_sensors.py
atlas-asset-os/: README.md  SYSTEM_CHECK.md  config.json  conftest.py  demo_system_check.py  requirements-test.txt  requirements.txt  start.py
atlas-asset-os/BasePlate_OS/: config.json  pyproject.toml
atlas-asset-os/BasePlate_OS/modules/comms/: manager.py
atlas-asset-os/BasePlate_OS/modules/comms/functions/: get_tasks_by_entity.py  remove_object_reference.py  update_object.py
atlas-asset-os/BasePlate_OS/modules/operations/: manager.py  registration.py
atlas-asset-os/framework/: __init__.py  bus.py  master.py  utils.py
atlas-asset-os/modules/: MODULES.md  __init__.py  module_base.py  module_loader.py
atlas-asset-os/modules/camera_module/: PLAN.md
atlas-asset-os/tests/: README.md  conftest.py  test_module_base.py
atlas-tool-os/Gateway_OS/: config.json  master.py
(+115 files in other folders)
