[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseplate-os"
version = "0.1.0"
description = "BasePlate OS for Atlas Assets"
requires-python = ">=3.11"
dependencies = [
    "atlas-meshtastic-bridge",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "bus.py", "master.py"]
